# Embodied_AI_LABA

./: .gitmodules  README.md  pyproject.toml
src/embodied_ai_laba.egg-info/: PKG-INFO  SOURCES.txt
src/mani_skill_core/robots/robotis_ai_worker/: ai_worker.py
