[project]
name = "embodied-ai-laba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mani-skill",
    "torch>=2.7.1",
]

[tool.uv.sources]
mani-skill = { path = "third_party/ManiSkill3" }
embodied-ai-laba = { workspace = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mani_skill_core*"]

[dependency-groups]
dev = [
    "embodied-ai-laba",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
